# cloudflare-doh-worker

./: .dockerignore  .gitattributes  .gitignore  .pre-commit-config.yaml  .prettierrc.json  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  LICENSE  Makefile  README.md  Tiltfile  blocklist_sources.yaml  cliff.toml  docker-compose.yaml  dprint.json  entrypoint.sh  mise.deploy.toml  mise.list  mise.toml  package-lock.json  package.json  pyproject.toml  webpack.config.js  wrangler.toml
.github/: CODEOWNERS  dependabot.yml  renovate.json
.github/instructions/: python.instructions.md
.github/workflows/: ci.yml  codeql.yml  deploy-branch.yml  release.yml
dashboard/: grafana.json
docs/: design.puml
examples/: config.py
k8s/: mock-doh.yaml  nginx-config.yaml  nginx.yaml  tests.yaml  worker.yaml
nginx/: nginx.conf
nginx/conf.d/: doh.conf
scripts/: build_blocklist.py  upload_blocklist.py  wrangler_build.sh
src/: blocklist_parser.py  bloom_meta.py  bloom_meta.py.default  cache_utils.py  config.js  config.py  config_types.py  consts.js  dns.js  dns_utils.py  filter_meta.py  filter_meta.py.default  filter_utils.py  index.js  json_pure.py  loki.js  loki_utils.py  worker.py
tests/: conftest.py  latency.js  mock_doh_server.py  test_endpoints.py  test_integration.py  test_unit.py
tests/configs/: blocklist_single.json  default.py  dev-vars-no-token  dev-vars-with-token  ecs_mock.py  no_ecs_no_rebind.py
tests/src/: config.py
tools/filter-build/: Cargo.toml
tools/filter-build/src/: main.rs
worker/: dns_utils.py  loki_utils.py  main.py
workflows/: update-blocklist.yml
