[project]
name = "doh"
version = "1.0.1"
requires-python = ">=3.13"
dependencies = [
  "dnspython",
]

[dependency-groups]
deploy = [
  "workers-py",
  "workers-runtime-sdk",
]
dev = [
  "curl-cffi",
  "pytest",
  "pytest-rerunfailures",
  "pytest-xdist",
]

[tool.uv]
default-groups = ["deploy"]

[tool.pywrangler]
main = "src/worker.py"

[tool.pytest.ini_options]
addopts = "--reruns=2 --reruns-delay=2 -vv -ra"
pythonpath = ["src"]

[tool.ruff]
line-length = 120

[tool.ruff.lint]
select = [
  "ANN",
  "E4",
  "E7",
  "E9",
  "E501",
  "F",
  "B",
  "N",
  "Q",
  "I",
  "UP",
  "SIM",
  "C4",
  "COM812",
  "PT",
  "RUF",
  "T20",
  "S",
]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["ANN201", "S101", "S104", "S310", "S311"]

[tool.ruff.lint.isort]
force-sort-within-sections = true
