[project]
name = "doh"
version = "2.1.0"
requires-python = ">=3.13"
dependencies = [
  "dnspython>=2.8.0",
  "typedload>=2.40",
]

[dependency-groups]
deploy = [
  "pyyaml>=6.0.3",
  "rich>=14.3.3",
  "workers-py>=1.9.0",
  "workers-runtime-sdk>=1.1.0",
]
dev = [
  "curl-cffi>=0.14.0",
  "pytest-rerunfailures>=16.1",
  "pytest-xdist>=3.8.0",
  "pytest>=9.0.2",
]

[tool.uv]
default-groups = ["deploy"]

[tool.pywrangler]
main = "src/worker.py"

[tool.pytest.ini_options]
addopts = "--reruns=2 --reruns-delay=2 -vv -ra"
pythonpath = ["src"]

[tool.ruff]
line-length = 120

[tool.ruff.lint]
select = [
  "ANN",
  "B",
  "C4",
  "COM812",
  "E4",
  "E501",
  "E7",
  "E9",
  "F",
  "I",
  "N",
  "PT",
  "Q",
  "RUF",
  "S",
  "SIM",
  "T20",
  "UP",
]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["ANN201", "S101", "S104", "S310", "S311"]
"scripts/**" = ["T201", "S310", "S603"]

[tool.ruff.lint.isort]
force-sort-within-sections = true
